<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@android:color/white">



    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"/>


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="30sp"-->
<!--            android:textStyle="bold"-->
<!--            android:fontFamily="cursive"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:text="Selamat Datang"-->
<!--            android:layout_gravity="center"/>-->
<!--        <TextView-->
<!--            android:id="@+id/tv_namaMain"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:fontFamily="cursive"-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="@android:color/white"-->
<!--            tools:text="Namaku adalah"/>-->

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_welcome"
        android:textColor="#FFB6C1"
        android:fontFamily="cursive"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_centerInParent="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp">

        <!--row-->

    <!-- column 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/img_satu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dekorasi"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_kategori1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tvdekorasi"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- column 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/img_dua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/makeup"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_kategori2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_makeup"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--row-->

        <!-- column 1-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/img_tiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/undangan"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_kategori3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_undangan"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- column 2-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/img_empat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/supenir"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_kategori4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tv_soupenir"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>




        <!--row-->


    </GridLayout>



</LinearLayout>